# awesome-rs

./: Cargo.toml
asyncstd/: Cargo.toml
asyncstd/src/: lib.rs
asyncstd/tests/: 01.rs
asynctokio/: Cargo.toml
asynctokio/src/: lib.rs
crossbeammanual/: Cargo.toml  test
crossbeammanual/src/: lib.rs
futurebase/: Cargo.toml
futurebase/src/: lib.rs
futurebase/tests/: 01.rs
procmacros/: Cargo.toml
procmacros/src/: lib.rs
short-lived/: Cargo.toml
short-lived/src/: lib.rs
src/: main.rs
tokioasync/: Cargo.toml
tokioasync/src/: lib.rs
