[package]
name = "awesome"
version = "0.1.0"
authors = ["root"]
edition = "2018"

[dependencies]
slog-scope = "4.4.0"
slog-logger = {git = "https://github.com/luoyancn/slog-logger", tag = "v0.6.0"}
short-lived = {path = "short-lived", version = "0.1.0"}
futurebase = {path = "futurebase", version = "0.1.0"}
procmacros = {path = "procmacros", version = "0.1.0"}
asyncstd = {path = "asyncstd", version = "0.1.0"}
