[package]
name = "awesome"
version = "0.1.0"
authors = ["root"]
edition = "2021"

[dependencies]
async-std = {version = "1.9.0", features = ["attributes", "unstable"]}
futures = "0.3.15"
tokio = { version = "1.12.0", features = ["full"] }
slog-logger = {git = "https://github.com/luoyancn/slog-logger", tag = "v0.8.0"}
short-lived = {path = "short-lived", version = "0.1.0"}
futurebase = {path = "futurebase", version = "0.1.0"}
procmacros = {path = "procmacros", version = "0.1.0"}
asyncstd = {path = "asyncstd", version = "0.1.0"}
asynctokio = {path = "asynctokio", version = "0.1.0"}
crossbeammanual = {path = "crossbeammanual", version = "0.1.0"}
