[package]
name = "asyncstd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.9.0", features = ["attributes", "unstable"]}
futures = "0.3.15"
slog-logger = {git = "https://github.com/luoyancn/slog-logger", tag = "v0.7.0"}
