[package]
name = "asynctokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
tokio = { version = "1.12.0", features = ["full"] }
slog-logger = {git = "https://github.com/luoyancn/slog-logger", tag = "v0.8.0"}
