[package]
name = "futurebase"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
tokio = {version = "1.5.0", features = ["full"]}
slog-scope = "4.4.0"
slog-logger = {git = "https://github.com/luoyancn/slog-logger", tag = "v0.6.0"}
