[package]
name = "procmacros"
version = "0.1.0"
authors = ["root"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.9"
syn = {version = "1.0.72", features = ["full", "extra-traits", "visit"]}
proc-macro2 = "1.0.26"

[lib]
proc-macro = true
