[package]
name = "short-lived"
version = "0.1.0"
authors = ["root"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
crossbeam-channel = "0.5.1"
crossbeam-deque = "0.8.0"
crossbeam-epoch = "0.9.4"
crossbeam-queue = "0.3.1"
crossbeam-utils = "0.8.4"
num_cpus = "1.13.0"
lazy_static = "1.4.0"
